fix rankings cards on Safari

--- a/views/style.scss
+++ b/views/style.scss
@@ -1200,14 +1200,14 @@ table .time {
   height: 240px;
   border-radius: 16px;
   transform-origin: 40px 100px;
-  transform: /* translate(-50%, -50%) */ translateZ(1px);
+  transform: translateZ(-100px);
   transition: 1s;
   perspective: 1000px;
   transform-style: preserve-3d;
   z-index: 10;
   > * {
     background-color: var(--card-color);
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100%;
     transition: transform 1s;
